--- a/src/components/nav/nav.pug
+++ b/src/components/nav/nav.pug
@@ -1,6 +1,2 @@
-nav.nav
-    ul.nav__list
-        - var menuItems = ['Cards', 'Service', 'Banking', 'Faq', 'Contacts', 'Create Account']
-        each item in menuItems
-            li.nav__item
-                a.nav__link= item
+nav
+    +list(['Cards', 'Service', 'Banking', 'Faq', 'Contacts', 'Create Account'], 'nav')
