--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,74 +4,13 @@ head
 	link(href='/css/style.css', rel='stylesheet', type="text/css")
 	script(src='/js/fontawesome-all.min.js' defer)
 body
+	include ../template/mixins
 	include ../template/header/header
 	include ../components/hero/hero
 	main.main
-		section.section.section__process
-			.section__content
-				.section__header
-					h2 Easy process
-					p to get a credit card
-				.section__features
-					.section__features-item
-						span.section__feature-name Online application
-						p.section__feature-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-					.section__features-item
-						span.section__feature-name Get approval
-						p.section__feature-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-					.section__features-item
-						span.section__feature-name Get your card
-						p.section__feature-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-		section.section.section__benefits
-			.section__media.section__benefits-video
-			.section__content
-				.section__header
-					h2 It's easy to use
-					p Benefits credit card
-				.section__benefits
-					.section__benefits-item
-						span.section__benefits-name Online application
-						p.section__benefits-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-					.section__benefits-item
-						span.section__benefits-name Get approval
-						p.section__benefits-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-					.section__benefits-item
-						span.section__benefits-name Get your card
-						p.section__benefits-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-					.section__benefits-item
-						span.section__benefits-name Get your card
-						p.section__benefits-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-					.section__benefits-item
-						span.section__benefits-name Get your card
-						p.section__benefits-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-			a.section__readmore(href='#') Read more
-		section.section.section__service
-			.section__content
-				.section__header
-					h2 It's easy to use
-					p Benefits credit card
-				.section__services.section__slider.slider
-					.slider__elem
-						a(href='#')
-							img(src='../../img/services-balance.jpg', alt='Balance', width='270', height='270')
-							span.section__services-name Balance transform
-					.slider__elem
-						a(href='#')
-							img(src='../../img/services-banking.jpg', alt='Balance', width='270', height='270')
-							span.section__services-name Internet banking
-					.slider__elem
-						a(href='#')
-							img(src='../../img/services-payment.jpg', alt='Balance', width='270', height='270')
-							span.section__services-name Buying payment
-					.slider__elem
-						a(href='#')
-							img(src='../../img/services-tikets.jpg', alt='Balance', width='270', height='270')
-							span.section__services-name Balance transform
 
+		include ../components/process/process
 
+		include ../components/benefits/benefits
 
-
-
-
-
-
+		include ../components/service/service
