Card-wp finished pug

--- a/sass/global/layout.scss
+++ b/sass/global/layout.scss
@@ -1,12 +1,12 @@
 html {
-  font-size: 15px;
+  font-size: 12px;
   line-height: 1.4;
   font-weight: normal;
 }
 
 body {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   min-width: 320px;
   font-family: 'PT Sans', sans-serif;
   color: $green;
