--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
-@import 'normalize.scss';
+@import "normalize";
 @import 'variables.scss';
 @import 'mixins.scss';
 @import 'global/fonts.scss';
-@import 'global/layout.scss'
+@import 'global/layout.scss';
+@import "../src/components/process/process.scss";
