--- a/src/components/nav/nav.pug
+++ b/src/components/nav/nav.pug
@@ -1,2 +1,3 @@
+include ../../template/mixins
 nav
-    +list(['Cards', 'Service', 'Banking', 'Faq', 'Contacts', 'Create Account'], 'nav')
+    +list(['Cards', 'Service', 'Banking', 'Faq', 'Contacts', 'Create Account'], 'nav', 'nav')
