--- a/src/components/process/process.pug
+++ b/src/components/process/process.pug
@@ -1,5 +1,5 @@
 section.section.process
-    .process__content
+    .process__container
         .process__header
             h2 Easy process
             p to get a credit card
