--- a/src/template/header/header.pug
+++ b/src/template/header/header.pug
@@ -1,5 +1,5 @@
-header.page-header
-    .page-header__inner
-        .page-header__top
+header.header
+    .header__container
+        .header__top
             include ../../components/logo/logo
             include ../../components/nav/nav
