--- a/src/components/benefits/benefits.pug
+++ b/src/components/benefits/benefits.pug
@@ -4,20 +4,20 @@ section.section.benefits
         .benefits__header
             h2 It's easy to use
             p Benefits credit card
-        .benefits__benefits
-            .benefits__benefits-item
-                span.benefits__benefits-name Online application
-                p.benefits__benefits-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-            .benefits__benefits-item
-                span.benefits__benefits-name Get approval
-                p.benefits__benefits-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-            .benefits__benefits-item
-                span.benefits__benefits-name Get your card
-                p.benefits__benefits-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-            .benefits__benefits-item
-                span.benefits__benefits-name Get your card
-                p.benefits__benefits-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
-            .benefits__benefits-item
-                span.benefits__benefits-name Get your card
-                p.benefits__benefits-text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
+        .benefits__list
+            .benefits__item
+                span.benefits__name Online application
+                p.benefits__text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
+            .benefits__item
+                span.benefits__name Get approval
+                p.benefits__text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
+            .benefits__item
+                span.benefits__name Get your card
+                p.benefits__text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
+            .benefits__item
+                span.benefits__name Get your card
+                p.benefits__text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
+            .benefits__item
+                span.benefits__name Get your card
+                p.benefits__text Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.
     a.benefits__readmore(href='#') Read more
