several steps. js, css and graph bundles

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,7 +1,7 @@
 doctype html
 head
 	title Digital Banking
-	link(href='static/css/style.css', rel='stylesheet')
+	link(href='dist/main.bundle.css', rel='stylesheet')
 	script(src='minjs/fontawesome-all.min.js')
 body
 	include ../template/header/header
@@ -21,3 +21,4 @@ body
 		include ../components/questions/questions
 
 		include ../template/footer/footer
+    script(src='dist/bundle.js')
