--- a/src/static/sass/global/layout.scss
+++ b/src/static/sass/global/layout.scss
@@ -10,7 +10,8 @@ body {
   min-width: 320px;
   font-family: 'PT Sans', sans-serif;
   color: $green;
-  background: $white;
+  background: pink;
+  //background-image: url("../../img/bg-ccard.jpg");
 }
 
 h1,
