--- a/src/static/sass/global/fonts.scss
+++ b/src/static/sass/global/fonts.scss
@@ -1,3 +1,4 @@
+/*
 @font-face {
 	font-family: 'PT Sans';
 	src: url('fonts/ptsans.woff') format('woff'),
@@ -13,3 +14,4 @@
 	font-weight: bold;
 	font-style: normal;
 }
+*/
