--- a/src/static/sass/style.scss
+++ b/src/static/sass/style.scss
@@ -1,6 +1,6 @@
-@import "normalize";
+@import "normalize.scss";
 @import 'variables.scss';
 @import 'mixins.scss';
 @import 'global/fonts.scss';
 @import 'global/layout.scss';
-@import "../src/components/process/process.scss";
+
